--- a/profiles/helm/themes/contrib/minimalist_admin/sass/theme/_forms.scss
+++ b/profiles/helm/themes/contrib/minimalist_admin/sass/theme/_forms.scss
@@ -80,7 +80,7 @@ fieldset {
 
 
 // Bootstrap Multiselect
-
+/*
 .multiselect.form-control {
   text-align: left;
 
@@ -100,6 +100,7 @@ fieldset {
 .multiselect-container>li>a>label {
   padding-left: 0;
 }
+*/
 
 // Add help icon to titles with help text
 label.label-help:after {
