--- a/profiles/helm/themes/contrib/minimalist_admin/sass/_local-variables.scss
+++ b/profiles/helm/themes/contrib/minimalist_admin/sass/_local-variables.scss
@@ -11,7 +11,7 @@ $bootstrap-sass-asset-helper: false;//(twbs-font-path("") != unquote('twbs-font-
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
-
+$white:                  #fff;
 $black:                  #000;
 $gray-base:              #000 !default;
 $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
