--- a/profiles/helm/themes/custom/helm_civic/sass/theme/_home.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/theme/_home.scss
@@ -7,6 +7,13 @@ body.front {
   #content {
     width: 100%;
   }
+  
+  // Footer
+  // ------------------------
+
+  .footer {
+    margin-top: 0!important;
+  }
 }
 
 // Panels layout
